--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart Checkout</title>
+    <title>Cart Overview</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="webvUI/src/webvUI.min.css">
     <link rel="stylesheet" href="webvUI/src/webvUI-menu.min.css">
@@ -26,54 +26,58 @@
 
 <body style="background-color:#fafafa;">
     <div class="main-container">
-
-    <div class="preview">
-        <div class="page__hd">
-            <h1 class="page__title">Cart Checkout</h1>
-            <p class="page__desc">
-                Review and validate payment
-            </p>
-        </div>
-        <div class="page__bd">
-            <div class="webvUI-form-preview">
-                <div class="webvUI-form-preview__hd">
-                    <label class="webvUI-form-preview__label">
-                        Payment amount
-                    </label>
-                    <em class="webvUI-form-preview__value">$2400.00</em>
-                </div>
-                <div class="webvUI-form-preview__bd">
-                    <div class="webvUI-form-preview__item">
-                        <label class="webvUI-form-preview__label">
-                            Order ID
-                        </label>
-                        <span class="webvUI-form-preview__value">Groceries-42a3b</span>
+<div class="panel">
+    <div class="page__hd">
+        <h1 class="page__title">Cart Overview</h1>
+        <p class="page__desc">
+            View and edit your cart
+        </p>
+    </div>
+    <div class="page__bd">
+        <div class="webvUI-panel webvUI-panel_access">
+            <div class="webvUI-panel__hd">
+                Groceries
+            </div>
+            <div class="webvUI-panel__bd">
+                <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                    <div class="webvUI-media-box__hd">
+                        <img class="webvUI-media-box__thumb" src="../../src/img/apple.jpg" alt="">
                     </div>
-                    <div class="webvUI-form-preview__item">
-                        <label class="webvUI-form-preview__label">
-                            Name
-                        </label>
-                        <span class="webvUI-form-preview__value">John Smith</span>
+                    <div class="webvUI-media-box__bd">
+                        <h4 class="webvUI-media-box__title">Green Apple</h4>
+                        <p class="webvUI-media-box__desc">
+                            0.80$
+                        </p>
                     </div>
-                    <div class="webvUI-form-preview__item">
-                        <label class="webvUI-form-preview__label">
-                            Card Information
-                        </label>
-                        <span class="webvUI-form-preview__value">1234-5678-91011 06/18</span>
+                    <span class="webvUI-icon-delete"></span>
+                </a>
+                <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                    <div class="webvUI-media-box__hd">
+                        <img class="webvUI-media-box__thumb" src="../../src/img/eggs.jpg" alt="">
                     </div>
-                    <div class="webvUI-form-preview__item">
-                        <label class="webvUI-form-preview__label">
-                            Billing Address
-                        </label>
-                        <span class="webvUI-form-preview__value">123 Asphodel Way,<br/> 10010 Elysium</span>
+                    <div class="webvUI-media-box__bd">
+                        <h4 class="webvUI-media-box__title">Half-a-dozen Eggs</h4>
+                        <p class="webvUI-media-box__desc">
+                            3.20$
+                        </p>
                     </div>
-                </div>
+                    <span class="webvUI-icon-delete"></span>
+                </a>
+            </div>
+            <div class="webvUI-panel__ft">
+                <a href="javascript:void(0);" class="webvUI-cell webvUI-cell_access webvUI-cell_link">
+                    <div class="webvUI-cell__bd">
+                        see more
+                    </div>
+                    <span class="webvUI-cell__ft"></span>
+                </a>
             </div>
         </div>
     </div>
+</div>
 
     <div class="webvUI-bottombtn">
-        <a href="javascript:;" class="webvUI-btn webvUI-btn_primary" onclick="closeWebview()">Validate Payment</a>
+        <a href="javascript:;" class="webvUI-btn webvUI-btn_primary" onclick="closeWebview()">Proceed to Checkout</a>
     </div>
 
     <script>
