--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="webvUI-panel__bd">
                 <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
                     <div class="webvUI-media-box__hd">
-                        <img class="webvUI-media-box__thumb" src="../../src/img/apple.jpg" alt="">
+                        <img class="webvUI-media-box__thumb" src="webvUI/src/img/apple.jpg" alt="">
                     </div>
                     <div class="webvUI-media-box__bd">
                         <h4 class="webvUI-media-box__title">Green Apple</h4>
@@ -53,7 +53,7 @@
                 </a>
                 <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
                     <div class="webvUI-media-box__hd">
-                        <img class="webvUI-media-box__thumb" src="../../src/img/eggs.jpg" alt="">
+                        <img class="webvUI-media-box__thumb" src="webvUI/src/img/eggs.jpg" alt="">
                     </div>
                     <div class="webvUI-media-box__bd">
                         <h4 class="webvUI-media-box__title">Half-a-dozen Eggs</h4>
