--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart Overview</title>
+    <title>Leaderboard</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="webvUI/src/webvUI.min.css">
     <link rel="stylesheet" href="webvUI/src/webvUI-menu.min.css">
@@ -26,58 +26,80 @@
 
 <body style="background-color:#fafafa;">
     <div class="main-container">
-<div class="panel">
-    <div class="page__hd">
-        <h1 class="page__title">Cart Overview</h1>
-        <p class="page__desc">
-            View and edit your cart
-        </p>
-    </div>
-    <div class="page__bd">
-        <div class="webvUI-panel webvUI-panel_access">
-            <div class="webvUI-panel__hd">
-                Groceries
-            </div>
-            <div class="webvUI-panel__bd">
-                <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
-                    <div class="webvUI-media-box__hd">
-                        <img class="webvUI-media-box__thumb" src="webvUI/src/img/apple.jpg" alt="">
-                    </div>
-                    <div class="webvUI-media-box__bd">
-                        <h4 class="webvUI-media-box__title">Green Apple</h4>
-                        <p class="webvUI-media-box__desc">
-                            0.80$
-                        </p>
-                    </div>
-                    <span class="webvUI-icon-delete"></span>
-                </a>
-                <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
-                    <div class="webvUI-media-box__hd">
-                        <img class="webvUI-media-box__thumb" src="webvUI/src/img/eggs.jpg" alt="">
-                    </div>
-                    <div class="webvUI-media-box__bd">
-                        <h4 class="webvUI-media-box__title">Half-a-dozen Eggs</h4>
-                        <p class="webvUI-media-box__desc">
-                            3.20$
-                        </p>
-                    </div>
-                    <span class="webvUI-icon-delete"></span>
-                </a>
-            </div>
-            <div class="webvUI-panel__ft">
-                <a href="javascript:void(0);" class="webvUI-cell webvUI-cell_access webvUI-cell_link">
-                    <div class="webvUI-cell__bd">
-                        see more
-                    </div>
-                    <span class="webvUI-cell__ft"></span>
-                </a>
+    <div class="webvUI-mainwv-body panel">
+        <div class="page__hd">
+            <h1 class="page__title">Leaderboard</h1>
+            <p class="page__desc">
+                View leaderboard and scores
+            </p>
+        </div>
+        <div class="page__bd">
+            <div class="webvUI-panel webvUI-panel_access">
+                <div class="webvUI-panel__bd">
+                    <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                        <div class="webvUI-media-box__hd">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/avatar-round-1.png" alt="">
+                        </div>
+                        <div class="webvUI-media-box__bd">
+                            <h4 class="webvUI-media-box__title">1</h4>
+                            <p class="webvUI-media-box__desc">
+                                Jane Doe
+                            </p>
+                        </div>
+                        <span class=""><img style="height:40px;width:40px" src="webvUI/src/img/1_medal.svg" alt=""></span>
+                    </a>
+                    <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                        <div class="webvUI-media-box__hd">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/avatar-round-2.png" alt="">
+                        </div>
+                        <div class="webvUI-media-box__bd">
+                            <h4 class="webvUI-media-box__title">2</h4>
+                            <p class="webvUI-media-box__desc">
+                                Helen Smith
+                            </p>
+                        </div>
+                        <span class=""><img style="height:40px;width:40px" src="webvUI/src/img/2_medal.svg" alt=""></span>
+                    </a>
+                    <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                        <div class="webvUI-media-box__hd">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/avatar-round-3.png" alt="">
+                        </div>
+                        <div class="webvUI-media-box__bd">
+                            <h4 class="webvUI-media-box__title">3</h4>
+                            <p class="webvUI-media-box__desc">
+                                James Williams
+                            </p>
+                        </div>
+                        <span class=""><img style="height:40px;width:40px" src="webvUI/src/img/3_medal.svg" alt=""></span>
+                    </a>
+                    <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                        <div class="webvUI-media-box__hd">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/avatar-round-4.png" alt="">
+                        </div>
+                        <div class="webvUI-media-box__bd">
+                            <h4 class="webvUI-media-box__title">4</h4>
+                            <p class="webvUI-media-box__desc">
+                                John Johnson
+                            </p>
+                        </div>
+                    </a>
+                    <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
+                        <div class="webvUI-media-box__hd">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/man_silhouette.jpg" alt="">
+                        </div>
+                        <div class="webvUI-media-box__bd">
+                            <h4 class="webvUI-media-box__title">5</h4>
+                            <p class="webvUI-media-box__desc">
+                                Paul Brown
+                            </p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
     <div class="webvUI-bottombtn">
-        <a href="javascript:;" class="webvUI-btn webvUI-btn_primary" onclick="closeWebview()">Proceed to Checkout</a>
+        <a href="javascript:;" class="webvUI-btn webvUI-btn_default" onclick="closeWebview()">⬅️ Back to Bot</a>
     </div>
 
     <script>
