--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <div class="webvUI-panel__bd">
                     <a href="javascript:void(0);" class="webvUI-media-box webvUI-media-box_appmsg">
                         <div class="webvUI-media-box__hd">
-                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/avatar-round-1.png" alt="">
+                            <img class="webvUI-media-box__thumb" src="webvUI/src/img/man_silhouette.jpg" alt=" alt="">
                         </div>
                         <div class="webvUI-media-box__bd">
                             <h4 class="webvUI-media-box__title">1</h4>
                             <p class="webvUI-media-box__desc">
-                                Jane Doe
+                                Lydon Aoake
                             </p>
                         </div>
                         <span class=""><img style="height:40px;width:40px" src="webvUI/src/img/1_medal.svg" alt=""></span>
